--- a/app/modules/community/templates/community/index_joined_communities.html
+++ b/app/modules/community/templates/community/index_joined_communities.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <h1 class="h3 mb-3"><b>All Communities</b></h1>
+    <h1 class="h3 mb-3"><b>My Joined Communities</b></h1>
 
     <a href="{{ url_for('community.create') }}" class="btn btn-primary mb-4">Create Community</a>
 
