--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -73,15 +73,25 @@ chico sundermann">
                 <li class="sidebar-header">
                     Communities
                 </li>
+                
+                <!-- Todas las comunidades -->
                 <li class="sidebar-item {{ 'active' if request.endpoint == 'community.index' else '' }}">
                     <a class="sidebar-link" href="{{ url_for('community.index') }}">
-                        <i class="align-middle" data-feather="layers"></i> <span class="align-middle">Communities</span>
+                        <i class="align-middle" data-feather="layers"></i> <span class="align-middle">All Communities</span>
                     </a>
                 </li>
-
+                
+                <!-- Comunidades que he creado -->
                 <li class="sidebar-item {{ 'active' if request.endpoint == 'community.index_my_communities' else '' }}">
                     <a class="sidebar-link" href="{{ url_for('community.index_my_communities') }}">
-                        <i class="align-middle" data-feather="list"></i> <span class="align-middle">My Communities</span>
+                        <i class="align-middle" data-feather="list"></i> <span class="align-middle">My Created Communities</span>
+                    </a>
+                </li>
+                
+                <!-- Comunidades a las que estoy unido -->
+                <li class="sidebar-item {{ 'active' if request.endpoint == 'community.index_joined_communities' else '' }}">
+                    <a class="sidebar-link" href="{{ url_for('community.index_joined_communities') }}">
+                        <i class="align-middle" data-feather="user-check"></i> <span class="align-middle">My Joined Communities</span>
                     </a>
                 </li>
                 
